--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App builder boilerplate",
   "config": {
     "transforms": "-t [ babelify --loose all --stage 0 ] -t envify",
-    "manifest": "offline.appcache"
+    "manifest": "offline.appcache",
+    "html": "data-build-version=\"__VERSION__\" manifest=\"__MANIFEST__\""
   },
   "scripts": {
     "lint": "eslint src/js",
@@ -19,9 +20,9 @@
     "build:clean": "find pub -type f ! -name \".*\" -maxdepth 1 -delete",
     "build:js": "browserify $DEBUG_BUILD $JSTRANSFORMS $npm_package_config_transforms --extension .js --extension .json --extension .jsx src/js/bootstrap.js > pub/bundle-${npm_package_version}${BUILD_SUFFIX}.js",
     "build:css": "postcss -u cssnext -o pub/styles-${npm_package_version}${BUILD_SUFFIX}.css src/css/global.css",
-    "build:html": "find src -name \"*.html\" -exec env F={} sh -c 'mkdir -p pub/$(dirname ${F#*/}) ; sed -e \"s/__VERSION__/${npm_package_version}${BUILD_SUFFIX}/\" -e 's/__MANIFEST__/.\\\\\\\\/$npm_package_config_manifest/' < {} > pub/${F#*/}' \\;",
+    "build:html": "find src -name \"*.html\" -exec env F={} sh -c 'mkdir -p pub/$(dirname ${F#*/}) ; sed -e \"s/<html/<html ${npm_package_config_html}/\" -e \"s/__VERSION__/${npm_package_version}${BUILD_SUFFIX}/\" -e 's/__MANIFEST__/.\\\\\\\\/$npm_package_config_manifest/' < {} > pub/${F#*/}' \\;",
     "build:manifest": "MANIFEST_VERSION=$(test -f .manifest-version && cat .manifest-version || echo 0 > .manifest-version) npm run manifest",
-    "manifest": "npm run manifest:copy-template && npm run manifest:append-filelist && npm run manifest:bump-version",
+    "manifest": "test ! -z \"$npm_package_config_manifest\" && npm run manifest:copy-template && npm run manifest:append-filelist && npm run manifest:bump-version",
     "manifest:copy-template": "sed -e \"s/__VERSION__/${npm_package_version}-$MANIFEST_VERSION/\" < src/$npm_package_config_manifest > pub/$npm_package_config_manifest",
     "manifest:append-filelist": "find pub -type f ! -name '.*' ! -name '*.appcache' | sed -e 's/pub/./g' >> pub/$npm_package_config_manifest",
     "manifest:bump-version": "echo $(($MANIFEST_VERSION + 1)) > .manifest-version",
